extract commonTest to test-utils subproject