@@ -1,55 +1,54 @@
 package mpern.sap.commerce.build;
 
-import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
 import java.util.Locale;
-import java.util.stream.Stream;
 
-import static mpern.sap.commerce.build.HybrisPlugin.HYBRIS_BIN_DIR;
+import mpern.sap.commerce.test.TestConstants;
 
 /**
  * Utility functions to generate extensions for the test.
  */
 public final class ExtensionsTestUtils {
 
+    private static final String HYBRIS_BIN_DIR = "hybris/bin/";
+
     public static void generateExtension(Path location, String extensionName, List<String> dependencies)
-        throws IOException {
+            throws IOException {
 
         Path extensionFolder = location.resolve(extensionName);
         Files.createDirectories(extensionFolder);
         Path extensionInfoFile = extensionFolder.resolve("extensioninfo.xml");
         Files.createFile(extensionInfoFile);
 
-        String firstUpExtensionName = extensionName.substring(0, 1).toUpperCase(Locale.ROOT) + extensionName.substring(1);
+        String firstUpExtensionName = extensionName.substring(0, 1).toUpperCase(Locale.ROOT)
+                + extensionName.substring(1);
 
         StringBuilder dependenciesContent = new StringBuilder();
         for (String dependency : dependencies) {
-            dependenciesContent.append("<requires-extension name=\"").append(dependency).append("\"/>").append(System.lineSeparator());
+            dependenciesContent.append("<requires-extension name=\"").append(dependency).append("\"/>")
+                    .append(System.lineSeparator());
         }
 
-        String extensionInfoContentPattern =
-            "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>%n"
+        String extensionInfoContentPattern = "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>%n"
                 + "  <extensioninfo xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:noNamespaceSchemaLocation=\"extensioninfo.xsd\">%n"
                 + "    <extension abstractclassprefix=\"Generated\" classprefix=\"%2$s\" managername=\"%2$sManager\"%n"
                 + "          managersuperclass=\"de.hybris.platform.jalo.extension.Extension\" name=\"%1$s\" usemaven=\"false\">%n"
                 + "      %3$s%n"
                 + "      <coremodule generated=\"true\" manager=\"de.hybris.platform.jalo.GenericManager\" packageroot=\"de.hybris.platform.%1$s\"/>%n"
-                + "    </extension>%n"
-                + "  </extensioninfo>";
+                + "    </extension>%n" + "  </extensioninfo>";
 
-        String extensionInfoContent = String.format(extensionInfoContentPattern,
-            extensionName, firstUpExtensionName, dependenciesContent);
+        String extensionInfoContent = String.format(extensionInfoContentPattern, extensionName, firstUpExtensionName,
+                dependenciesContent);
 
-        Files.write(extensionInfoFile, extensionInfoContent.getBytes(StandardCharsets.UTF_8), StandardOpenOption.CREATE,
-            StandardOpenOption.TRUNCATE_EXISTING);
+        Files.writeString(extensionInfoFile, extensionInfoContent, StandardOpenOption.CREATE,
+                StandardOpenOption.TRUNCATE_EXISTING);
     }
 
     public static void ensureLocalExtensions(Path projectDir) throws Exception {
-        Path sourceFile = Paths.get(ExtensionsTestUtils.class.getResource("/localextensions.xml").toURI());
+        Path sourceFile = TestConstants.testResource("localextensions.xml");
         Path targetFile = projectDir.resolve("hybris/config/localextensions.xml");
         TestUtils.ensureParents(targetFile);
         Files.copy(sourceFile, targetFile, StandardCopyOption.REPLACE_EXISTING);
